--- a/styles/global.css
+++ b/styles/global.css
@@ -4,10 +4,15 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  min-height: 100%;
 }
 
 h1,
@@ -27,6 +32,7 @@ blockquote {
 
 a {
   color: inherit;
+  text-underline-offset: 4px;
 }
 
 img {
