--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 50px;
+  padding: 80px 50px 90px;
 }
 
 .header__menu {
@@ -58,7 +58,7 @@
 
 .cover {
   position: relative;
-  padding: 165px 50px 50px;
+  padding: 50px 50px 50px;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-position: center;
@@ -80,6 +80,7 @@
   text-transform: uppercase;
   line-height: 1.15;
   letter-spacing: 30px;
+  margin-left: -20px;
 }
 
 .aligned-text {
@@ -89,7 +90,7 @@
 
 .aligned-text_center {
   text-align: center;
-  margin-left: 60px;
+  margin-left: 40px;
 }
 
 .aligned-text_right {
@@ -133,7 +134,7 @@
 }
 
 .lots {
-  padding: 180px 50px;
+  padding: 100px 50px;
 }
 
 .lots__heading {
@@ -155,6 +156,7 @@
 .lots__card-list-item {
   flex: 1;
   min-width: 430px;
+  height: 450px;
 }
 
 .card-link {
@@ -168,8 +170,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
-  padding: 50px 40px;
+  height: 100%; 
+  padding: 30px 40px;
   color: #FFF;
   background-size: cover;
   background-position: center;
@@ -253,7 +255,7 @@
 .footer {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
-  padding: 180px 50px 90px;
+  padding: 100px 50px 50px;
 }
 
 .footer__menu {
