--- a/styles/style.css
+++ b/styles/style.css
@@ -84,15 +84,21 @@
 
 .aligned-text {
   display: block;
+  line-height: 1;
+}
+
+.aligned-text:not(:last-child) {
   margin-bottom: 20px;
 }
 
 .aligned-text_center {
   text-align: center;
+  margin-left: 60px;
 }
 
 .aligned-text_right {
   text-align: right;
+  margin-right: -30px;
 }
 
 .letter-spacing-extended {
@@ -110,7 +116,7 @@
   justify-content: end;
   align-items: center;
   gap: 78px;
-  margin-top: 135px;
+  margin-top: 127px;
   color: #FFF;
 }
 
@@ -139,13 +145,11 @@
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-left: 40px;
-  margin-bottom: 27px;
+  margin: 0 0 27px 40px;
 }
 
 .lots__card-list {
   display: flex;
-  flex-wrap: wrap;
   gap: 25px;
   list-style: none;
   margin-bottom: 30px;
@@ -167,7 +171,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  min-height: 450px;
   padding: 50px 40px;
   color: #FFF;
   background-size: cover;
@@ -200,6 +204,7 @@
   position: relative;
   z-index: 1;
   font-size: 20px;
+  line-height: 1.2;
 }
 
 .lots__look-more-link {
@@ -239,7 +244,7 @@
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
-  margin: 100px 0;
+  margin: 100px 0 75px;
 }
 
 .about__text {
@@ -247,11 +252,13 @@
   flex-direction: column;
   gap: 25px;
   font-size: 20px;
+  line-height: 1.2;
 }
 
 .footer {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
+  align-items: start;
   padding: 180px 50px 90px;
 }
 
